# libemacsheadlesss

./: .gitignore  CMakeLists.txt  README.md  go.sum
headless/: CMakeLists.txt
internal/: CMakeLists.txt
internal/pkg/: CMakeLists.txt
internal/pkg/c_exports/: CMakeLists.txt  c_exports.go  headless.h  headless_service.c  headless_service.h
pkg/: CMakeLists.txt
pkg/service/: CMakeLists.txt  service.go
proto/: CMakeLists.txt  emacsheadless.pb.go  emacsheadless.proto  emacsheadless_grpc.pb.go
src/: CMakeLists.txt  headless.c  headless.h  main.go
test/: CMakeLists.txt  test.c  test_client.go  test_main.cpp  test_main.h
test/cli/: CMakeLists.txt  test_client.go
test/serv/: CMakeLists.txt  main.go
tools/: c_to_go_export.py
