set(HEADLESS_SERV headless-serv${CMAKE_EXECUTABLE_SUFFIX})
set(HEADLESS_LIB ${CMAKE_SHARED_LIBRARY_PREFIX}headless${CMAKE_SHARED_LIBRARY_SUFFIX})

file(GLOB HEADLESS_SERV_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.go")

add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_SERV}
  COMMAND env GOPATH=${GOPATH} ${CMAKE_Go_COMPILER} build
  -buildmode=exe
  -o ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_SERV}
  ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS   gen_rpc
    ${HEADLESS_SERV_SOURCES}
    ${RPC_SOURCES}
  WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
  VERBATIM
)

add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
  COMMAND env GOPATH=${GOPATH} ${CMAKE_Go_COMPILER} build
  -buildmode=c-shared
  -o ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
  ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS   gen_rpc
    ${HEADLESS_SERV_SOURCES}
    ${RPC_SOURCES}
  WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
  VERBATIM
)

add_custom_target(libheadless ALL DEPENDS
  ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
)

add_dependencies(libheadless gen_rpc)

install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB} DESTINATION lib)

add_custom_target(headless_serv ALL DEPENDS
  ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_SERV}
  libheadless
)

install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_SERV} DESTINATION bin)
