set(HEADLESS_LIB ${CMAKE_SHARED_LIBRARY_PREFIX}headless${CMAKE_SHARED_LIBRARY_SUFFIX})

file(GLOB HEADLESS_SERV_SOURCES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.go")

set(BRIDGE_SOURCES headless.c headless.h)

add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
  COMMAND env GOPATH=${GOPATH} ${CMAKE_Go_COMPILER} build
  -buildmode=c-shared
  -o ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
  ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS   gen_rpc
    ${HEADLESS_SERV_SOURCES}
    ${RPC_SOURCES}
    ${BRIDGE_SOURCES}
    ${SERVICE_SOURCES}
  WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
  VERBATIM
)

add_custom_target(libheadless ALL DEPENDS
  ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB}
)

add_dependencies(libheadless gen_rpc)

install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${HEADLESS_LIB} DESTINATION lib)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/headless.h
  ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}headless.h
  DESTINATION include)
